--- a/src/views/pages/tools/base64-image-converter.hbs
+++ b/src/views/pages/tools/base64-image-converter.hbs
@@ -20,7 +20,7 @@
         <h2>Base64 Encoded Image:</h2>
         <textarea id="encoded-result" readonly></textarea>
         <button id="encoded-copy-result" class="button-copy" disabled>Copy</button>
-        <a id="encoded-open-result-link" target="_blank"><button id="encoded-open-result" disabled>Open in new tab</button></a>
+        <a id="encoded-open-result-link" target="_blank"><button id="encoded-open-result" data-icon-after="&#xf08e" disabled>Open in new tab</button></a>
     </section>
     <section>
         <h2>Image:</h2>
