--- a/src/views/pages/tools/currency-exchange.hbs
+++ b/src/views/pages/tools/currency-exchange.hbs
@@ -1,59 +1,6 @@
 Last Updated:
 <span id="last-updated"><span class="error">Loading...</span></span>
-<table>
-    <tbody>
-        <tr>
-            <td>
-                <div style="margin-top: 0">
-                    $1
-                    <span class="tooltip-bottom" data-tooltip="United States Dollar">USD</span>
-                    =
-                    <span id="usd-cad"><span class="error">...</span></span>
-                    <span class="tooltip-bottom" data-tooltip="Canadian Dollar">CAD</span>
 
-                    <br />$1 USD =
-                    <span id="usd-eur"><span class="error">...</span></span>
-                    <span class="tooltip-bottom" data-tooltip="Euro">EUR</span>
-
-                    <br />$1 USD =
-                    <span id="usd-gbp"><span class="error">...</span></span>
-                    <span class="tooltip-bottom" data-tooltip="Great British Pound Sterling">GBP</span>
-
-                    <br />$1 USD =
-                    <span id="usd-aud"><span class="error">...</span></span>
-                    <span class="tooltip-bottom" data-tooltip="Australian Dollar">AUD</span>
-
-                    <br />$1 USD =
-                    <span id="usd-crc"><span class="error">...</span></span>
-                    <span class="tooltip-bottom" data-tooltip="Costa Rican Colón">CRC</span>
-
-                    <br />$1 USD =
-                    <span id="usd-jpy"><span class="error">...</span></span>
-                    <span class="tooltip-bottom" data-tooltip="Japanese Yen">JPY</span>
-                </div>
-            </td>
-            <td style="padding-left: 30px">
-                <div style="margin-top: 0">
-                    $1 CAD =
-                    <span id="cad-usd"><span class="error">...</span></span>
-                    USD<br />
-                    €1 EUR =
-                    <span id="eur-usd"><span class="error">...</span></span>
-                    USD<br />
-                    £1 GBP =
-                    <span id="gbp-usd"><span class="error">...</span></span>
-                    USD<br />
-                    $1 AUD =
-                    <span id="aud-usd"><span class="error">...</span></span>
-                    USD<br />
-                    ₡1 CRC =
-                    <span id="crc-usd"><span class="error">...</span></span>
-                    USD<br />
-                    ¥1 JPY =
-                    <span id="jpy-usd"><span class="error">...</span></span>
-                    USD
-                </div>
-            </td>
-        </tr>
-    </tbody>
-</table>
+<div id="rates-grid" class="basic-grid" style="--min-width: 200px">
+    <span class="error">Loading...</span>
+</div>
