--- a/src/views/pages/tools/ip-info.hbs
+++ b/src/views/pages/tools/ip-info.hbs
@@ -1,21 +1,5 @@
-All information based soley on your IP information,
+All information is based solely on your IP information,
 <em>not</em>
 your actual location.
 
-<div id="reload-prompt" class="error">If you see this message, please reload the page.</div><br />
-
-<span class="tooltip-right" data-tooltip="Internet Protocol">IP</span>
-Address:
-<span id="ip-address"><span class="error">Loading...</span></span>
-
-<br /><span class="tooltip-right" data-tooltip="Internet Service Provider">ISP</span>:
-<span id="isp"><span class="error">Loading...</span></span>
-
-<br />Location:
-<span id="location"><span class="error">Loading...</span></span>
-
-<br />Latitude (north-south):
-<span id="latitude"><span class="error">Loading...</span></span>
-
-<br />Longitude (east-west):
-<span id="longitude"><span class="error">Loading...</span></span>
+<div id="ip-info"><span class="info">If this message persists, please reload the page.</span></div>
