--- a/src/public/styles/pages/tools/counter.css
+++ b/src/public/styles/pages/tools/counter.css
@@ -1,3 +1,33 @@
-#counter .odometer-ribbon-inner {
-    transition: transform 0.3s !important;
+#counter-container {
+    text-align: center;
+}
+
+#counter {
+    color: var(--info-color-300);
+    font-size: 90px;
+    font-family: var(--font-family);
+
+    & .odometer-ribbon-inner {
+        transition: transform 0.3s !important;
+    }
+}
+
+#buttons-container {
+    text-align: center;
+
+    & button {
+        display: block;
+    }
+}
+
+#manual-activation {
+    margin: 15px auto 0;
+    padding: 5px;
+    font-size: 15px;
+}
+
+#reset {
+    margin: 1em auto 0;
+    padding: 10px;
+    font-size: 20px;
 }
