--- a/src/views/pages/tools/counter.hbs
+++ b/src/views/pages/tools/counter.hbs
@@ -1,13 +1,11 @@
-<div style="text-align: center; margin: 0; font-weight: 600; font-size: 90px; line-height: 100%"><span class="odometer" id="counter">0</span><br /></div>
-<div style="text-align: center; margin: 0; font-weight: 600; line-height: 100%">
+<div id="counter-container"><div id="counter" class="odometer">0</div></div>
+<div id="buttons-container">
     Activation Button:
-    <select style="margin-top: 20px" id="activation-button">
+    <select id="activation-button">
         <option value="1">Spacebar</option>
         <option value="2">Return</option>
         <option value="3">C</option>
     </select>
-    <br />
-    <button id="manual-activation" style="padding: 5px; font-size: 15px; margin-top: 15px">Manual Increase</button>
-    <br />
-    <button id="reset" style="padding: 10px; font-size: 20px; margin-top: 20px; margin-bottom: 25px">Reset</button>
+    <button id="manual-activation">Manual Increase</button>
+    <button id="reset" class="button-danger">Reset</button>
 </div>
