--- a/src/views/pages/tools/regex-tester.hbs
+++ b/src/views/pages/tools/regex-tester.hbs
@@ -1,3 +1,5 @@
+{{! TODO: ADD A HANDLER FOR IF REGEX FAILS! }}
+
 Input:<br />
 <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Regular_Expressions/Cheatsheet" target="_blank" class="external-link">Regex</a>:
 <input id="regex-input" style="width: 320px; max-width: 70%" />　<a
