--- a/src/views/pages/tools/length-converter.hbs
+++ b/src/views/pages/tools/length-converter.hbs
@@ -1,35 +1,39 @@
-Input:<br />
-<select style="margin-top: 20px" id="input-type">
-    <option value="1">Kilometer</option>
-    <option value="2">Meter</option>
-    <option value="3">Centimeter</option>
-    <option value="4">Millimeter</option>
-    <option value="5">Micrometer</option>
-    <option value="6">Nanometer</option>
-    <option value="7">Mile</option>
-    <option value="8">Yard</option>
-    <option value="9" selected>Foot</option>
-    <option value="10">Inch</option>
-    <option value="11">Nautical mile</option>
-</select>
-<br /><input id="input" />
-<br /><button id="reset">Reset</button>
-<button id="switch">Switch input and output</button>
+<section>
+    <h2>Input:</h2>
+    <select id="input-type">
+        <option value="1">Kilometer</option>
+        <option value="2">Meter</option>
+        <option value="3">Centimeter</option>
+        <option value="4">Millimeter</option>
+        <option value="5">Micrometer</option>
+        <option value="6">Nanometer</option>
+        <option value="7">Mile</option>
+        <option value="8">Yard</option>
+        <option value="9" selected>Foot</option>
+        <option value="10">Inch</option>
+        <option value="11">Nautical mile</option>
+    </select>
+    <input id="input" />
+    <button id="reset" class="button-danger">Reset</button>
+    <button id="switch">Switch input and output</button>
+</section>
 <hr />
-<span class="tooltip-bottom" data-tooltip="Rounded to the nearest trillionth">Output</span>:
-<div id="message" class="error" style="font-size: 15px"></div>
-<select style="margin-top: 20px" id="output-type">
-    <option value="1">Kilometer</option>
-    <option value="2">Meter</option>
-    <option value="3">Centimeter</option>
-    <option value="4">Millimeter</option>
-    <option value="5">Micrometer</option>
-    <option value="6">Nanometer</option>
-    <option value="7" selected>Mile</option>
-    <option value="8">Yard</option>
-    <option value="9">Foot</option>
-    <option value="10">Inch</option>
-    <option value="11">Nautical mile</option>
-</select>
-<br /><input id="output" readonly />
-<br /><button id="copy-output" disabled>Copy</button>
+<section>
+    <h2><span class="tooltip-bottom" data-tooltip="Rounded to the nearest trillionth">Output</span>:</h2>
+    <div id="message" class="error" style="font-size: 15px"></div>
+    <select id="output-type">
+        <option value="1">Kilometer</option>
+        <option value="2">Meter</option>
+        <option value="3">Centimeter</option>
+        <option value="4">Millimeter</option>
+        <option value="5">Micrometer</option>
+        <option value="6">Nanometer</option>
+        <option value="7" selected>Mile</option>
+        <option value="8">Yard</option>
+        <option value="9">Foot</option>
+        <option value="10">Inch</option>
+        <option value="11">Nautical mile</option>
+    </select>
+    <input id="output" readonly />
+    <button id="copy-output" class="button-copy" disabled>Copy</button>
+</section>
