--- a/src/views/pages/tools/list-sorter.hbs
+++ b/src/views/pages/tools/list-sorter.hbs
@@ -1,13 +1,19 @@
-
-Input:<br />
-<textarea id="input" style="width: 50%"></textarea>
-<br /><span class="tooltip-bottom" data-tooltip="What separates items in the list (\n = newline)">Separator</span>:
-<input id="separator" value="\n" style="width: 4rem" />
-<br /><button id="alphabetize-normal">Alphabetize (A-Z) <i id="alphabetize-result"></i></button><button id="numerize">Numerize (filters non numbers) <i id="numerize-result"></i></button><button
-    id="randomize"
->Randomize <i id="randomize-result"></i></button><button id="reverse">Reverse current order <i id="reverse-result"></i></button>
-<button id="clear">Clear</button>
+<section>
+    <h2>Input:</h2>
+    <textarea id="input"></textarea>
+    <div>
+        <span class="tooltip-bottom" data-tooltip="What separates items in the list (\n = newline)">Separator</span>:
+        <input id="separator" value="\n" style="width: calc(6ch + 12px)" />
+    </div>
+    <button id="alphabetize">Alphabetize (A-Z)</button>
+    <button id="numerize">Numerize (filters non numbers)</button>
+    <button id="randomize">Randomize</button>
+    <button id="reverse">Reverse current order</button>
+    <button id="clear" class="button-danger">Clear</button>
+</section>
 <hr />
-Output:<br />
-<textarea id="result" style="width: 50%" readonly></textarea>
-<br /><button id="copy-result" disabled>Copy</button>
+<section>
+    <h2>Output:</h2>
+    <textarea id="result" readonly></textarea>
+    <button id="copy-result" class="button-copy" disabled>Copy</button>
+</section>
