--- a/src/views/pages/tools/quick-copy.hbs
+++ b/src/views/pages/tools/quick-copy.hbs
@@ -1,21 +1,27 @@
 <div class="basic-grid" style="--min-width: 450px">
-    <div>
-        <button id="clear-clipboard" style="padding: 0.5rem">Clear Clipboard</button><br /><br />
-        Zero Width Space (&ZeroWidthSpace;):
-        <button id="copy-zws">Copy</button><br />
-        Non-Breaking Space/Hard Space (&nbsp;):
-        <button id="copy-nbsp">Copy</button><br />
-        Em Space (&emsp;):
-        <button id="copy-ems">Copy</button><br />
-        En Space (&ensp;):
-        <button id="copy-ens">Copy</button><br />
-        Thin Space (&thinsp;):
-        <button id="copy-ts">Copy</button><br />
-    </div>
-    <div>
-        Current Clipboard:<br /><br />
-        <div class="error" style="font-size: 14px" id="clipboard-warning"><i class="fa-solid fa-exclamation-triangle"></i> Permission to read clipboard denied!</div>
-        <textarea id="copied-text" style="width: 60%" readonly></textarea><br />
+    <section>
+        <button id="clear-clipboard">Clear Clipboard</button>
+
+        <div>Zero Width Space (&ZeroWidthSpace;):
+            <button id="copy-zws" class="button-copy">Copy</button>
+        </div>
+        <div>Non-Breaking Space (&nbsp;):
+            <button id="copy-nbsp" class="button-copy">Copy</button>
+        </div>
+        <div>Em Space (&emsp;):
+            <button id="copy-ems" class="button-copy">Copy</button>
+        </div>
+        <div>En Space (&ensp;):
+            <button id="copy-ens" class="button-copy">Copy</button>
+        </div>
+        <div>Thin Space (&thinsp;):
+            <button id="copy-ts" class="button-copy">Copy</button>
+        </div>
+    </section>
+    <section>
+        <h2>Current Clipboard:</h2>
+        <div class="error" id="clipboard-warning"></div>
+        <textarea id="copied-text" readonly></textarea>
         <button id="select-clipboard" disabled>Select Clipboard</button>
-    </div>
+    </section>
 </div>
