--- a/src/views/pages/tools/stopwatch.hbs
+++ b/src/views/pages/tools/stopwatch.hbs
@@ -1,5 +1,5 @@
-<span class="timer-time"><span id="hours-display">00</span>:<span id="minutes-display">00</span>:<span id="seconds-display">00</span>.<span id="milliseconds-display">000</span></span>
-<br /><br />
-<button id="start" style="padding: 10px; font-size: 20px">Start</button>
-<button id="stop" style="padding: 10px; font-size: 20px">Stop</button>
-<button id="reset" style="padding: 10px; font-size: 20px">Reset</button>
+<div class="timer-time"><span id="hours-display">00</span>:<span id="minutes-display">00</span>:<span id="seconds-display">00</span>.<span id="milliseconds-display">000</span></div>
+
+<button id="start">Start</button>
+<button id="stop">Stop</button>
+<button id="reset">Reset</button>
