--- a/src/views/pages/tools/random-number.hbs
+++ b/src/views/pages/tools/random-number.hbs
@@ -1,10 +1,12 @@
-Min (Inclusive):
-<input type="number" id="min-number" value="1" style="width: 4rem" />
-<br />Max (Inclusive)
-<input type="number" id="max-number" value="10" style="width: 4rem" />
-<br /><button id="generate-number">Generate <i id="generate-result"></i></button>
-<button id="reset">Reset</button>
-<hr />
-<div style="text-align: center; margin: 0; font-weight: 800; font-size: 90px">
-    <span class="odometer" id="random-number">0</span>
+<div>
+    Min (Inclusive):
+    <input type="number" class="no-arrow" id="min-number" value="1" />
 </div>
+<div>
+    Max (Inclusive)
+    <input type="number" class="no-arrow" id="max-number" value="10" />
+</div>
+<button id="generate-number">Generate</button>
+<button id="reset" class="button-danger">Reset</button>
+<hr />
+<div id="random-number-container"><span class="odometer" id="random-number">0</span></div>
