--- a/src/views/layouts/layout.hbs
+++ b/src/views/layouts/layout.hbs
@@ -91,7 +91,7 @@
                 </a>
             </div>
             <div class="search-box">
-                <input class="search-text" type="text" placeholder="Search here..." /><i class="search-button fa-solid fa-magnifying-glass"></i><br />
+                <input class="search-text" type="text" placeholder="Search here..." /><i class="search-button fa-solid fa-magnifying-glass"></i>
                 <div class="search-results"></div>
             </div>
             <a href="/tools/time" class="nav-time"><span id="time-display">Loading...</span> <i id="time-icon" class="fa-solid fa-triangle-exclamation"></i></a>
@@ -125,33 +125,49 @@
                 </div>
                 <hr />
                 <div id="shortcuts-list">
-                    <kbd>Option</kbd>
-                    +
-                    <kbd>K</kbd>: Opens keyboard shortcut menu (this menu)<br />
-                    <kbd>Option</kbd>
-                    +
-                    <kbd>C</kbd>: Clears clipboard<br />
-                    <kbd>Option</kbd>
-                    +
-                    <kbd>H</kbd>: Opens homepage (current tab, new tab with
-                    <kbd>Meta</kbd>/<kbd>⌘ Cmd</kbd>)<br />
-                    <kbd>Option</kbd>
-                    +
-                    <kbd>S</kbd>: Opens GitHub repository (new tab)<br />
-                    <kbd>Option</kbd>
-                    +
-                    <kbd>P</kbd>: Opens page source (GitHub, new tab)<br />
-                    <kbd>Option</kbd>
-                    +
-                    <kbd>Shift</kbd>
-                    +
-                    <kbd>P</kbd>: Opens page script (or global script if no script) (GitHub, new tab)<br />
-                    <kbd>Option</kbd>
-                    +
-                    <kbd>/</kbd>: Selects search bar<br />
-                    <kbd>Option</kbd>
-                    +
-                    <kbd>T</kbd>: Scroll to the top of the page
+                    <div>
+                        <kbd>Option</kbd>
+                        +
+                        <kbd>K</kbd>: Opens keyboard shortcut menu (this menu)
+                    </div>
+                    <div>
+                        <kbd>Option</kbd>
+                        +
+                        <kbd>C</kbd>: Clears clipboard
+                    </div>
+                    <div>
+                        <kbd>Option</kbd>
+                        +
+                        <kbd>H</kbd>: Opens homepage (current tab, new tab with
+                        <kbd>Meta</kbd>/<kbd>⌘ Cmd</kbd>)
+                    </div>
+                    <div>
+                        <kbd>Option</kbd>
+                        +
+                        <kbd>S</kbd>: Opens GitHub repository (new tab)
+                    </div>
+                    <div>
+                        <kbd>Option</kbd>
+                        +
+                        <kbd>P</kbd>: Opens page source (GitHub, new tab)
+                    </div>
+                    <div>
+                        <kbd>Option</kbd>
+                        +
+                        <kbd>Shift</kbd>
+                        +
+                        <kbd>P</kbd>: Opens page script (or global script if no script) (GitHub, new tab)
+                    </div>
+                    <div>
+                        <kbd>Option</kbd>
+                        +
+                        <kbd>/</kbd>: Selects search bar
+                    </div>
+                    <div>
+                        <kbd>Option</kbd>
+                        +
+                        <kbd>T</kbd>: Scroll to the top of the page
+                    </div>
                 </div>
             </div>
         </div>
