--- a/src/views/pages/tools/scientific-notation-converter.hbs
+++ b/src/views/pages/tools/scientific-notation-converter.hbs
@@ -7,7 +7,7 @@ Scientific notation can be represented using e notation, such as
 
 <div>
     Decimal:
-    <input type="text" id="decimal-input" style="width: 10rem" />
+    <input type="text" id="decimal-input" />
     <button id="decimal-convert" disabled>Convert</button>
     <button id="decimal-reset" class="button-danger" disabled>Reset</button>
     <i id="decimal-arrow" class="fa-solid fa-arrow-right"></i>
@@ -18,7 +18,7 @@ Scientific notation can be represented using e notation, such as
 
 <div>
     Scientific (e) Notation:
-    <input id="scientific-input" style="width: 10rem" />
+    <input id="scientific-input" />
     <button id="scientific-convert" disabled>Convert</button>
     <button id="scientific-reset" class="button-danger" disabled>Reset</button>
     <i id="scientific-arrow" class="fa-solid fa-arrow-right"></i>
