--- a/src/views/pages/tools/stopwatch.hbs
+++ b/src/views/pages/tools/stopwatch.hbs
@@ -2,4 +2,4 @@
 
 <button id="start">Start</button>
 <button id="stop">Stop</button>
-<button id="reset">Reset</button>
+<button id="reset" class="button-danger">Reset</button>
