--- a/src/views/pages/tools/time.hbs
+++ b/src/views/pages/tools/time.hbs
@@ -1,22 +1,41 @@
-Time:
-<span id="time"></span>
-(<span id="dst"></span>
-<span data-tooltip="Daylight Savings Time">DST</span>)<br />
-Date:
-<span id="date"></span><br />
-<span data-tooltip="Milliseconds since January 1st, 1970 in Coordinated Universal Time (UTC)">UNIX Epoch</span>
-Time:
-<span id="unix"></span><br />
-Timezone:
-<span id="timezone"></span><br /><br />
-Time in Japan (<span data-tooltip="Japan Standard Time">JST</span>):
-<span id="jp-time"></span><br />
-Time in Costa Rica (<span data-tooltip="Central Standard Time">CST</span>):
-<span id="cr-time"></span><br />
-Time in England/Ireland (<span data-tooltip="Greenwich Mean Time (not observed during Daylight Savings Time)">GMT</span>/<span
-    data-tooltip="British Summer Time (observed during Daylight Savings Time)"
->BST</span>):
-<span id="gb-time"></span><br />
-<span data-tooltip="Coordinated Universal Time">UTC</span>
-Time:
-<span id="utc-time"></span><br />
+<div>
+    Time:
+    <span id="time"></span>
+</div>
+<div>
+    In
+    <span data-tooltip="Daylight Savings Time">DST</span>:
+    <span id="dst"></span>
+</div>
+<div>
+    Date:
+    <span id="date"></span>
+</div>
+<div>
+    <span data-tooltip="Milliseconds since January 1st, 1970 in Coordinated Universal Time (UTC)">UNIX Epoch</span>
+    Time:
+    <span id="unix"></span>
+</div>
+<div>
+    Timezone:
+    <span id="timezone"></span>
+</div>
+<div class="break-above">
+    Time in Japan (<span data-tooltip="Japan Standard Time">JST</span>):
+    <span id="jp-time"></span>
+</div>
+<div>
+    Time in Costa Rica (<span data-tooltip="Central Standard Time">CST</span>):
+    <span id="cr-time"></span>
+</div>
+<div>
+    Time in England/Ireland (<span data-tooltip="Greenwich Mean Time (not observed during Daylight Savings Time)">GMT</span>/<span
+        data-tooltip="British Summer Time (observed during Daylight Savings Time)"
+    >BST</span>):
+    <span id="gb-time"></span>
+</div>
+<div>
+    <span data-tooltip="Coordinated Universal Time">UTC</span>
+    Time:
+    <span id="utc-time"></span>
+</div>
