--- a/src/views/pages/tools/word-counter.hbs
+++ b/src/views/pages/tools/word-counter.hbs
@@ -1,13 +1,22 @@
-<textarea id="input" style="min-width: 60%; width: 60%; max-width: 70%; min-height: 16rem; height: 16rem; max-height: 30rem; resize: both" placeholder="Type here..."></textarea>
-<br />
-Characters:
-<span id="character-count" style="color: var(--info-color-200)">0</span><br />
-Words:
-<span id="word-count" style="color: var(--info-color-200)">0</span><br />
-Sentences:
-<span id="sentence-count" style="color: var(--info-color-200)">0</span><br />
-Lines:
-<span id="line-count" style="color: var(--info-color-200)">0</span><br />
-Paragraphs:
-<span id="paragraph-count" style="color: var(--info-color-200)">0</span><br />
-<button id="reset">Reset</button>
+<textarea id="input" placeholder="Type here..."></textarea>
+<div>
+    Characters:
+    <span id="character-count" class="count-result">0</span>
+</div>
+<div>
+    Words:
+    <span id="word-count" class="count-result">0</span>
+</div>
+<div>
+    Sentences:
+    <span id="sentence-count" class="count-result">0</span>
+</div>
+<div>
+    Lines:
+    <span id="line-count" class="count-result">0</span>
+</div>
+<div>
+    Paragraphs:
+    <span id="paragraph-count" class="count-result">0</span>
+</div>
+<button id="reset" class="button-danger">Reset</button>
