--- a/src/views/pages/tools/svg-to-png.hbs
+++ b/src/views/pages/tools/svg-to-png.hbs
@@ -1,30 +1,30 @@
 <div class="basic-grid" style="--min-width: 450px">
     <div>
-        SVG:
-        <br />
-        <textarea id="svg-input" style="width: 450px; max-width: 70%; height: 200px; max-height: 350px; resize: both"></textarea><br />
-        <button id="load-svg" style="margin-left: 0">Load SVG</button>
-        <button id="clear">Clear</button>
+        <h2>SVG:</h2>
+        <textarea id="svg-input"></textarea>
+        <button id="load-svg">Load SVG</button>
+        <button id="clear" class="button-danger">Clear</button>
     </div>
     <div>
-        Loaded SVG (auto-shrunk to fit):
-        <br />
+        <h2>Loaded SVG (auto-shrunk to fit):</h2>
         <div id="svg-preview"></div>
     </div>
 </div>
 <div class="basic-grid" style="--min-width: 450px">
-    <div style="line-height: 200%">
-        Save Options:
-        <br />
-        Width:
-        <input id="width-input" style="width: 75px" type="number" min="1" max="9999" placeholder="100" /><br />
-        Height:
-        <input id="height-input" style="width: 75px" type="number" min="1" max="9999" placeholder="100" /><br />
-        <button id="save-png" style="margin-left: 0">Save PNG</button>
+    <div>
+        <h2>Save Options:</h2>
+        <div>
+            Width:
+            <input id="width-input" type="number" min="1" max="9999" placeholder="100" disabled />
+        </div>
+        <div>
+            Height:
+            <input id="height-input" type="number" min="1" max="9999" placeholder="100" disabled />
+        </div>
+        <button id="save-png" disabled>Save PNG</button>
     </div>
     <div>
-        Converted PNG (auto-shrunk to fit):
-        <br />
+        <h2>Converted PNG (auto-shrunk to fit):</h2>
         <canvas id="png-canvas"></canvas>
     </div>
 </div>
