--- a/src/views/pages/tools/temperature-converter.hbs
+++ b/src/views/pages/tools/temperature-converter.hbs
@@ -1,19 +1,23 @@
-Input:<br />
-<select style="margin-top: 20px" id="input-type">
-    <option value="1" selected>Fahrenheit</option>
-    <option value="2">Celsius</option>
-    <option value="3">Kelvin</option>
-</select>
-<br /><input id="input" />
-<br /><button id="reset">Reset</button>
-<button id="switch">Switch input and output</button>
+<section>
+    <h2>Input:</h2>
+    <select id="input-type">
+        <option value="1" selected>Fahrenheit</option>
+        <option value="2">Celsius</option>
+        <option value="3">Kelvin</option>
+    </select>
+    <input id="input" />
+    <button id="reset" class="button-danger">Reset</button>
+    <button id="switch">Switch input and output</button>
+</section>
 <hr />
-<span class="tooltip-bottom" data-tooltip="Rounded to the nearest thousandth">Output</span>:
-<div id="message" class="error" style="font-size: 15px"></div>
-<select style="margin-top: 20px" id="output-type">
-    <option value="1">Fahrenheit</option>
-    <option value="2" selected>Celsius</option>
-    <option value="3">Kelvin</option>
-</select>
-<br /><input id="output" readonly />
-<br /><button id="copy-output" disabled>Copy</button>
+<section>
+    <h2><span class="tooltip-bottom" data-tooltip="Rounded to the nearest thousandth">Output</span>:</h2>
+    <div id="message" class="error"></div>
+    <select id="output-type">
+        <option value="1">Fahrenheit</option>
+        <option value="2" selected>Celsius</option>
+        <option value="3">Kelvin</option>
+    </select>
+    <input id="output" readonly />
+    <button id="copy-output" class="button-copy" disabled>Copy</button>
+</section>
