--- a/src/views/pages/tools/time-converter.hbs
+++ b/src/views/pages/tools/time-converter.hbs
@@ -1,39 +1,43 @@
-Input:<br />
-<select style="margin-top: 20px" id="input-type">
-    <option value="1">Nanoseconds</option>
-    <option value="2">Microseconds</option>
-    <option value="3">Milliseconds</option>
-    <option value="4">Seconds</option>
-    <option value="5">Minutes</option>
-    <option value="6">Hours</option>
-    <option value="7" selected>Days</option>
-    <option value="8">Weeks</option>
-    <option value="9">Months</option>
-    <option value="10">Years</option>
-    <option value="11">Decades</option>
-    <option value="12">Centuries</option>
-    <option value="13">Millennia</option>
-</select>
-<br /><input id="input" />
-<br /><button id="reset">Reset</button>
-<button id="switch">Switch input and output</button>
+<section>
+    <h2>Input:</h2>
+    <select id="input-type">
+        <option value="1">Nanoseconds</option>
+        <option value="2">Microseconds</option>
+        <option value="3">Milliseconds</option>
+        <option value="4">Seconds</option>
+        <option value="5">Minutes</option>
+        <option value="6">Hours</option>
+        <option value="7" selected>Days</option>
+        <option value="8">Weeks</option>
+        <option value="9">Months</option>
+        <option value="10">Years</option>
+        <option value="11">Decades</option>
+        <option value="12">Centuries</option>
+        <option value="13">Millennia</option>
+    </select>
+    <input id="input" />
+    <button id="reset" class="button-danger">Reset</button>
+    <button id="switch">Switch input and output</button>
+</section>
 <hr />
-<span class="tooltip-bottom" data-tooltip="Rounded to the nearest trillionth">Output</span>:
-<div id="message" class="error" style="font-size: 15px"></div>
-<select style="margin-top: 20px" id="output-type">
-    <option value="1">Nanoseconds</option>
-    <option value="2">Microseconds</option>
-    <option value="3">Milliseconds</option>
-    <option value="4">Seconds</option>
-    <option value="5" selected>Minutes</option>
-    <option value="6">Hours</option>
-    <option value="7">Days</option>
-    <option value="8">Weeks</option>
-    <option value="9">Months</option>
-    <option value="10">Years</option>
-    <option value="11">Decades</option>
-    <option value="12">Centuries</option>
-    <option value="13">Millennia</option>
-</select>
-<br /><input id="output" readonly />
-<br /><button id="copy-output" disabled>Copy</button>
+<section>
+    <h2><span class="tooltip-bottom" data-tooltip="Rounded to the nearest trillionth">Output</span>:</h2>
+    <div id="message" class="error"></div>
+    <select id="output-type">
+        <option value="1">Nanoseconds</option>
+        <option value="2">Microseconds</option>
+        <option value="3">Milliseconds</option>
+        <option value="4">Seconds</option>
+        <option value="5" selected>Minutes</option>
+        <option value="6">Hours</option>
+        <option value="7">Days</option>
+        <option value="8">Weeks</option>
+        <option value="9">Months</option>
+        <option value="10">Years</option>
+        <option value="11">Decades</option>
+        <option value="12">Centuries</option>
+        <option value="13">Millennia</option>
+    </select>
+    <input id="output" readonly />
+    <button id="copy-output" class="button-copy" disabled>Copy</button>
+</section>
