--- a/src/views/pages/info/coins-list.hbs
+++ b/src/views/pages/info/coins-list.hbs
@@ -2,7 +2,7 @@ Welcome! Here is a list of coins I have and need!
 
 <div id="login-container">
     Password:
-    <input type="text" id="login-password" style="width: 50px" />
+    <input type="text" id="login-password" />
     <button id="login-button">Login</button>
 </div>
 
