--- a/src/views/pages/info/minecraft-codes.hbs
+++ b/src/views/pages/info/minecraft-codes.hbs
@@ -22,7 +22,7 @@ For more information about formatting codes, see
     </tbody>
 </table>
 
-<table class="info-table" style="overflow-x: hidden; margin-top: 30px">
+<table class="info-table needs-scroll">
     <thead>
         <tr>
             <th>Type</th>
