--- a/src/views/error.hbs
+++ b/src/views/error.hbs
@@ -1,3 +1,3 @@
-<div class="error-title">{{title}} <i class="fa-regular fa-face-sad-tear" style="font-size: 80%"></i></div>
+<div class="error-title">{{title}} <i class="fa-regular fa-face-sad-tear"></i></div>
 <div class="error-warning">{{message}}</div>
 <img src="https://httpstatusdogs.com/img/{{status}}.jpg" alt="{{status}} - {{title}}" class="error-image" />
